# LorentzForceDemonstrator

./: .gitignore  CMakeLists.txt  GrpcPi.cc  GrpcServer.cc  Makefile  grpcMessageSerialization.grpc.pb.cc  grpcMessageSerialization.grpc.pb.h  grpcMessageSerialization.pb.cc  grpcMessageSerialization.pb.h  grpcMessageSerialization.proto
